--- a/src/components/common/Footer/Footer.module.css
+++ b/src/components/common/Footer/Footer.module.css
@@ -505,10 +505,6 @@
     margin-bottom: var(--space-5);
   }
 
-  /* Add padding for mobile navigation */
-  .footer {
-    padding-bottom: 80px;
-  }
 }
 
 /* Print Styles */
